Update cron schedule for reminders
Change reminder schedule to run daily at 9 AM UTC.

--- a/.github/workflows/send-due-today-reminders.yml
+++ b/.github/workflows/send-due-today-reminders.yml
@@ -9,7 +9,7 @@ on:
         type: string
   schedule:
     # Runs hourly (UTC). Server-side de-dupe prevents sending more than once/day per device.
-    - cron: "0 * * * *"
+    - cron: "0 9 * * *"
 
 permissions:
   contents: read
